# LIVpropa

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: FindCRPropa.cmake
examples/: comparisonCRPropa.ipynb
helper/: computeElectromagneticInteractions.py  constantsUnits.py  generateTables.sh  interactionRate.py  interactionRateLIV.py  interactionsElectromagnetic.py  kinematics.py  meanFreePath.py
include/: LIVpropa.h
include/livpropa/: Common.h  Data.h  Histogram.h  InverseComptonScattering.h  Kinematics.h  LorentzSymmetry.h  PairProduction.h  PairProductionLIV.h  PhotonDecay.h  Sampler.h  UnitsAndConstants.h  VacuumCherenkov.h  Weighter.h
python/: livpropa.i
src/: Data.cc  Histogram.cc  InverseComptonScattering.cc  Kinematics.cc  LorentzSymmetry.cc  PairProduction.cc  PairProductionLIV.cc  PhotonDecay.cc  Sampler.cc  VacuumCherenkov.cc  Weighter.cc
